--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="../public/css/style.css"/>
-    <script src="login.js"></script>
+    <link rel="stylesheet" href="/css/style.css"/>
+    <script src="/js/login.js"></script>
 </head>
 <body>
     <div id="heading"><h2>Server Login</h2></div>
